[project]
name = "crawl4ai-api-doc-crawler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles==24.1.0",
    "aiohappyeyeballs==2.4.4",
    "aiohttp==3.11.11",
    "aiosignal==1.3.2",
    "aiosqlite==0.20.0",
    "annotated-types==0.7.0",
    "anyio==4.8.0",
    "asyncio==3.4.3",
    "attrs==24.3.0",
    "beautifulsoup4==4.12.3",
    "certifi==2024.12.14",
    "cffi==1.17.1",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "colorama==0.4.6",
    "crawl4ai==0.4.247",
    "cryptography==44.0.0",
    "distro==1.9.0",
    "fake-http-header==0.3.5",
    "filelock==3.16.1",
    "frozenlist==1.5.0",
    "fsspec==2024.12.0",
    "greenlet==3.1.1",
    "h11==0.14.0",
    "html2text==2024.2.26",
    "httpcore==1.0.7",
    "httpx==0.27.2",
    "huggingface-hub==0.27.1",
    "idna==3.10",
    "importlib-metadata==8.5.0",
    "iniconfig==2.0.0",
    "jinja2==3.1.5",
    "jiter==0.8.2",
    "joblib==1.4.2",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "litellm==1.58.0",
    "lxml==5.3.0",
    "markdown==3.7",
    "markupsafe==3.0.2",
    "mockito==1.5.3",
    "mpmath==1.3.0",
    "multidict==6.1.0",
    "networkx==3.4.2",
    "nltk==3.9.1",
    "numpy==2.2.1",
    "openai>=1.0.0",
    "packaging==24.2",
    "pillow==10.4.0",
    "playwright==1.49.1",
    "pluggy==1.5.0",
    "propcache==0.2.1",
    "psutil==6.1.1",
    "pycparser==2.22",
    "pydantic==2.10.5",
    "pydantic-core==2.27.2",
    "pyee==12.0.0",
    "pyopenssl==25.0.0",
    "pytest==8.3.4",
    "pytest-mockito==0.0.4",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "pyyaml==6.0.2",
    "rank-bm25==0.2.2",
    "referencing==0.35.1",
    "regex==2024.11.6",
    "requests==2.32.3",
    "rich>=13.0.0",
    "rpds-py==0.22.3",
    "safetensors==0.5.2",
    "scikit-learn==1.6.1",
    "scipy==1.15.1",
    "sentence-transformers==3.3.1",
    "setuptools==75.8.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "snowballstemmer==2.2.0",
    "soupsieve==2.6",
    "sympy==1.13.1",
    "tf-playwright-stealth==1.1.0",
    "threadpoolctl==3.5.0",
    "tiktoken==0.8.0",
    "tokenizers==0.21.0",
    "torch==2.5.1",
    "tqdm==4.67.1",
    "transformers==4.48.0",
    "typing-extensions==4.12.2",
    "urllib3==2.3.0",
    "xxhash==3.5.0",
    "yarl==1.18.3",
    "zipp==3.21.0",
]
